--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <h1 >WDD 131: Dynamic Web Fundamentals - <strong>Gianfranco Gosdinski</strong></h1>
         <nav>
             <ul>
-                <li><a href="https://www.linkedin.com/in/gianfranco-gosdinski/" class="active">Linkedin</a> </li>
-                <li><a href="https://byui.instructure.com/">I-Learn</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/2?lang=eng&id=p6-p8#p6">Scripture</a></li>
-                <li><a href="">Final Project</a></li>
+                <li><a href="https://www.linkedin.com/in/gianfranco-gosdinski/" class="active"  target="_blank">Linkedin</a> </li>
+                <li><a href="https://byui.instructure.com/"  target="_blank">I-Learn</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/2?lang=eng&id=p6-p8#p6"  target="_blank">Scripture</a></li>
+                <li><a href=""  target="_blank">Final Project</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                         <img src="./images/fotoperfil.jpeg" alt="Me">
                     </div>
 
-                    <h3>My country, Peru</h3>
+                    <h3>My country, Peru <img src="./images/bandera.png" alt="Peru Flag" style=" height: auto;"></h3></h3>
                     <p class="secondp">Peru is a country in South America known for its rich history and diverse culture. It is home to ancient civilizations like the Incas, with the famous Machu Picchu being one of the most iconic landmarks. Peru has a population of about 33 million people, and its capital is Lima. The country is geographically diverse, with coastal deserts, the Andes mountains, and the Amazon rainforest. Peru's culture is a mix of indigenous traditions and Spanish influences, reflected in its vibrant festivals, music, and cuisine, which includes famous dishes like ceviche and lomo saltado.</p>
                 </div>
                 
@@ -44,15 +44,15 @@
         <section class="card card2">
             <h2 class="section">Web Dev Resources</h2>
             <ul class="resources">
-                <li><a href="https://www.freecodecamp.org/learn">freeCodeCamp</a></li>
-                <li><a href="https://www.w3schools.com/">w3schools</a></li>
-                <li><a href="https://www.codecademy.com/">codecademy</a></li>
+                <li><a href="https://www.freecodecamp.org/learn"  target="_blank">freeCodeCamp</a></li>
+                <li><a href="https://www.w3schools.com/"  target="_blank">w3schools</a></li>
+                <li><a href="https://www.codecademy.com/"  target="_blank">codecademy</a></li>
             </ul>
         </section>
       </main>
      
       <footer >
-        <p>date <span></span> Gianfranco Gosdinski. Lima, Perú</p>
+        <p>Date <span></span> Gianfranco Gosdinski. Lima, Perú</p>
         <p id="lasModified"></p>
       </footer>
 </body>
