--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       </main>
      
       <footer >
-        <p>Date <span></span> Gianfranco Gosdinski. Lima, Perú</p>
+        <p>&copy; <span id="currentyear"></span> Gianfranco Gosdinski. Lima, Peru</p>
         <p id="lasModified"></p>
       </footer>
+      <script src="./scripts/getdates.js"></script>
 </body>
 </html>
