Media Query Example Page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     <div>
                         <h3>My country, Peru <!-- <img src="./images/bandera.png" alt="Peru Flag" style=" height: auto;"> --></h3>
-                        <div class="image-container city">
+                        <div class="image-container flag">
                             <img src="./images/flagBig.png" alt="Flag of Peru">
                         </div>
                         
@@ -59,6 +59,13 @@
                 <li><a href="https://www.freecodecamp.org/learn"  target="_blank">freeCodeCamp</a></li>
                 <li><a href="https://www.w3schools.com/"  target="_blank">w3schools</a></li>
                 <li><a href="https://www.codecademy.com/"  target="_blank">codecademy</a></li>
+                <li><a href="https://www.python.org/"  target="_blank">Python</a></li>
+                <li><a href="https://developer.mozilla.org/es/docs/Web/JavaScript"  target="_blank">Javascript</a></li>
+                <li><a href="https://dotnet.microsoft.com/es-es/languages/csharp"  target="_blank">C#</a></li>
+                <li><a href="https://developer.mozilla.org/es/docs/Web/CSS " target="_blank">CSS</a></li>
+                <li><a href="https://developer.mozilla.org/es/docs/Web/HTML " target="_blank">HTML</a></li>
+                <li><a href="https://nodejs.org/docs/latest/api/" target="_blank">Node.js</a></li>
+                <li><a href="https://vuejs.org/" target="_blank">Vue.js</a></li>
             </ul>
         </section>
       </main>
