--- a/temples.html
+++ b/temples.html
@@ -32,7 +32,7 @@
         <h2>Home</h2>
         <div class="image-container">
             <figure>
-                <img src="./images/lima_peru_temple_lds.jpeg" alt="Lima Peru Temple">
+                <img src="./images/lima_peru_temple_lds.jpeg"" alt="Lima Peru Temple">
                 <figcaption>Lima Peru Temple</figcaption>
             </figure>
 
