--- a/place.html
+++ b/place.html
@@ -34,7 +34,7 @@
 
         <section class="info-section weather-info">
             <h2>Weather <span><img src="./images/weatherMobile.svg" alt="weather icon"></span></h2>
-            <p><strong>Temperature:</strong> <span id="temperature">25 Celsius
+            <p><strong>Temperature:</strong> <span id="temperature">25 Celsius</span></p>
             <p><strong>Conditions:</strong> Sunny</p>
             <p><strong>Wind:</strong> <span id="windSpeed">15</span> km/h</p>
             <p><strong>Wind Chill:</strong> <span id="feelsLike"></span></p>
