Siteplan - Add did I choose this topic

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -43,6 +43,10 @@
             </p>
         </section>
 
+        <section>
+            <h3>Why did I choose this topic?</h3>
+            <p>I chose this topic because I am from Peru and I lived outside my country for many years. One of the most popular topics of conversation when meeting new people was Peruvian food. This is how I discovered that the gastronomy of my country is really appreciated in the rest of the world. In my mind I always had the idea of ​​managing a Peruvian food restaurant where I could share the wonderful dishes of my country with others.</p>
+        </section>
         <!-- Scenarios Section -->
         <section class="scenarios">
             <h3>Scenarios</h3>
