--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sabores del Perú - Restaurant</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./siteplan.css">
+    <link rel="stylesheet" href="./styles/siteplan.css">
 </head>
 <body>
     <main>
@@ -15,20 +15,19 @@
             <h1>Sabores del Perú</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Reservations</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="siteplan.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="reservations.html">Reservations</a></li>
                 </ul>
             </nav>
         </header>
 
-        <!-- Main Section -->
+        <!-- Hero Section -->
         <section class="hero">
             <div class="hero-text">
                 <h2>Discover the Authentic Flavors of Peru</h2>
                 <p>Traditional dishes, a unique culinary experience.</p>
-                <a href="#" class="cta-btn">Explore Our Menu</a>
+                <a href="menu.html" class="cta-btn">Explore Our Menu</a>
             </div>
         </section>
 
@@ -36,74 +35,61 @@
         <section class="introduction">
             <h3>Our Story</h3>
             <p>
-                At Sabores del Perú, we bring the best of Peruvian cuisine to your table. From fresh ceviches to traditional dishes, our mission is to share the love for our culinary culture. 
+                At Sabores del Perú, we bring the best of Peruvian cuisine to your table. From fresh ceviches to traditional dishes like Lomo Saltado and Ají de Gallina, our mission is to share the love for our culinary culture. 
             </p>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem a provident dolore suscipit. Minima voluptatem non ipsam qui, magni placeat, illo ex repudiandae recusandae voluptatum maxime aliquid, ullam autem beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem a provident dolore suscipit. Minima voluptatem non ipsam qui, magni placeat, illo ex repudiandae recusandae voluptatum maxime aliquid, ullam autem beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem a provident dolore suscipit. Minima voluptatem non ipsam qui, magni placeat, illo ex repudiandae recusandae voluptatum maxime aliquid, ullam autem beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem a provident dolore suscipit. Minima voluptatem non ipsam qui, magni placeat, illo ex repudiandae recusandae voluptatum maxime aliquid, ullam autem beatae.
+                Our chefs meticulously select the finest ingredients to ensure authenticity in every bite. With a blend of indigenous ingredients and Spanish, African, and Asian influences, Peruvian cuisine offers a rich, unforgettable experience that’s as diverse as its culture.
             </p>
         </section>
 
-        <section>
-            <h3>Why did I choose this topic?</h3>
-            <p>I chose this topic because I am from Peru and I lived outside my country for many years. One of the most popular topics of conversation when meeting new people was Peruvian food. This is how I discovered that the gastronomy of my country is really appreciated in the rest of the world. In my mind I always had the idea of ​​managing a Peruvian food restaurant where I could share the wonderful dishes of my country with others.</p>
-        </section>
-        <!-- Scenarios Section -->
-        <section class="scenarios">
-            <h3>Scenarios</h3>
+        <!-- Featured Dishes Section -->
+        <section class="featured-dishes">
+            <h3>Featured Dishes</h3>
+            <p>Discover some of the must-try dishes at Sabores del Perú:</p>
             <ul>
-                <li>What are the must-try dishes at Sabores del Perú?</li>
-                <li>How can I make a reservation for a large group?</li>
+                <li><strong>Ceviche:</strong> Freshly marinated seafood with a tangy citrus flavor.</li>
+                <li><strong>Lomo Saltado:</strong> A classic stir-fry of beef, onions, and tomatoes served with crispy fries and rice.</li>
+                <li><strong>Ají de Gallina:</strong> Shredded chicken in a spicy, creamy sauce served with potatoes and rice.</li>
             </ul>
         </section>
 
-        <!-- Color Schema Section -->
-        <section class="color-schema">
-            <h3>Color Schema</h3>
-            <p>The selected color scheme for the website includes:</p>
-            <ul>
-                <li><strong>Red (#C8102E):</strong> Used for the background of the header and footer, with white text to enhance readability.</li>
-                <li><strong>Yellow (#E7CA00):</strong> Used for the background of buttons, providing a vibrant accent that stands out against the white background.</li>
-                <li><strong>Black (#333):</strong> The primary text color used throughout the body for general content, ensuring clarity and ease of reading.</li>
-            </ul>
-            <p>These colors are inspired by the national flag and coat of arms of Peru, reflecting the country’s rich heritage and cultural identity.</p>
+        <!-- Customer Reviews Section -->
+        <section class="customer-reviews">
+            <h3>What Our Customers Say</h3>
+            <blockquote>
+                "A truly remarkable dining experience! The Lomo Saltado was out of this world." — Sarah M.
+            </blockquote>
+            <blockquote>
+                "If you’re looking for authentic Peruvian flavors, Sabores del Perú is a must-visit!" — James K.
+            </blockquote>
         </section>
 
-        <!-- Typography Section -->
-        <section class="typography">
-            <h3>Typography</h3>
-            <p>The typography choices for the site are:</p>
-            <ul>
-                <li><strong>Font Family:</strong> <em>Roboto</em> (Available in weights 400 and 700)</li>
-                <li><strong>Headings:</strong> Roboto Bold (700) for all heading elements (h1, h2, h3) to create a strong visual hierarchy.</li>
-                <li><strong>Body Text:</strong> Roboto Regular (400) for all paragraph text to ensure readability and a modern feel.</li>
-            </ul>
+        <!-- Location and Hours Section -->
+        <section class="location-hours">
+            <h3>Visit Us</h3>
+            <p><strong>Address:</strong> 123 Peruvian Street, Lima, Peru</p>
+            <p><strong>Hours:</strong> Monday - Saturday: 12:00 PM - 10:00 PM | Sunday: Closed</p>
+            <a href="https://maps.google.com" target="_blank" class="cta-btn">Find Us on Google Maps</a>
         </section>
 
-        <!-- Wireframes Section -->
-        <section class="wireframes">
-            <h3>Wireframes</h3>
-            <div class="wireframe-images">
-                <figure>
-                    <img src="./images/largeScreen.PNG" alt="Wireframe for Desktop View">
-                    <figcaption>Wireframe for Desktop</figcaption>
-                </figure>
-                <figure>
-                    <img src="./images/mobileScreen.PNG" alt="Wireframe for Mobile View">
-                    <figcaption>Wireframe for Mobile</figcaption>
-                </figure>
-            </div>
-        </section>
-
-        <!-- Reservations Section -->
+        <!-- Call to Action Section -->
         <section class="reservations">
             <h3>Make Your Reservation</h3>
             <p>Reserve now and enjoy an unforgettable culinary experience.</p>
-            <a href="#" class="cta-btn">Reserve Now</a>
+            <a href="reservations.html" class="cta-btn">Reserve Now</a>
         </section>
 
+        <!-- Back to Top Button -->
+        <button id="backToTop" style="display: none;">Back to Top</button>
+
+        <script src="./scripts/scripts.js"></script>
         <!-- Footer -->
         <footer>
             <p>&copy; 2024 Sabores del Perú. All rights reserved.</p>
+            <p>Follow us:</p>
+            <a href="https://www.facebook.com" target="_blank">Facebook</a> |
+            <a href="https://www.instagram.com" target="_blank">Instagram</a> |
+            <a href="https://www.twitter.com" target="_blank">Twitter</a>
         </footer>
     </main>
 </body>
